Update Code Smell
Replace the type specification in this constructor call with the diamond operator ("<>")